--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,3 @@
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info, warnings_as_errors, report]}.
 {deps, []}.
 {ct_opts, [{dir, ["./test/max-prime-factor", "./test/number-spiral-diagonals"]}]}.
