--- a/.github/workflows/erlang-CI.yml
+++ b/.github/workflows/erlang-CI.yml
@@ -5,7 +5,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
+env:
+  ERL_AFLAGS: "-enable-feature all"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,6 +14,14 @@ jobs:
       image: erlang:25
     steps:
       - uses: actions/checkout@v3
+
+      - name: Format
+        working-directory: ${{github.workspace}}
+        run: rebar3 format
+
+      - name: Lint
+          working-directory: ${{github.workspace}}
+          run: rebar3 lint
 
       - name: Compile
         working-directory: ${{github.workspace}}
