--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,7 @@
-{erl_opts, [debug_info, warnings_as_errors, report]}.
+{project_plugins, [rebar3_format, rebar3_lint]}.
+
+{erl_opts, [debug_info, warnings_as_errors, report, {'enable-feature', all}]}.
+
 {deps, []}.
+
 {ct_opts, [{dir, ["./test/max-prime-factor", "./test/number-spiral-diagonals"]}]}.
